[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=2.0.1",
    "google-generativeai>=0.8.6",
    "pandas>=3.0.2",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
    "streamlit-autorefresh>=1.0.1",
]
